<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dit.brandon.assignment.AddBook"
    tools:showIn="@layout/activity_add_book">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BookName_EditText"
        android:hint="@string/BookName_EditText"
        android:layout_marginTop="31dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/AuthName_EditText"
        android:hint="@string/AuthName_EditText"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/BookName_EditText"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SName_EditText"
        android:hint="@string/SeriesName_EditText"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/AuthName_EditText"
        android:layout_alignStart="@+id/AuthName_EditText" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/BookInforadioGroup"
        android:baselineAligned="false"
        android:clickable="false"
        android:orientation="vertical"
        android:measureWithLargestChild="false"
        android:longClickable="false"
        android:nestedScrollingEnabled="false"
        android:transitionGroup="true"
        android:layout_below="@+id/SName_EditText"
        android:layout_alignStart="@+id/SName_EditText"
        android:layout_alignEnd="@+id/BookName_EditText"
        android:layout_marginBottom="200dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Read_Radio"
            android:checked="true"
            android:id="@+id/ReadradioButton" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Reading_Radio"
            android:id="@+id/ReadingRadioButton" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Want_Radio"
            android:id="@+id/WantRadioButton" />

    </RadioGroup>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Submit_Button"
        android:id="@+id/Submitbutton"
        android:layout_below="@+id/SName_EditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="126dp" />

</RelativeLayout>
