<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dit.brandon.assignment.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Welcome_TextView"
        android:id="@+id/WelcomeTextView"
        android:layout_marginTop="47dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Show_Button"
        android:id="@+id/ListBooksButton"
        android:layout_marginTop="73dp"
        android:layout_below="@+id/WelcomeTextView"
        android:layout_centerHorizontal="true"
        android:onClick="ListBooks"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Add_Button"
        android:id="@+id/AddBooksButton"
        android:layout_below="@+id/ListBooksButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:onClick="AddBooks"/>
</RelativeLayout>
